<resources>
    <string name="app_name">Hackler</string>
    <string name="Splash">HACKLER</string>
    <string name="Som">Som</string>
    <string name="Musica">Música</string>
    <string name="ConquistasConfig">Conquistas</string>
    <string name="Missao1">1</string>
    <string name="Missao2">2</string>
    <string name="Missao3">3</string>
    <string name="Missao4">4</string>
    <string name="Cadastrar">Ainda não possui cadastro?</string>
    <string name="logintexto">Ou faça</string>
    <string name="loginlink">Login</string>
    <string name="localização">Localização</string>
    <string name="senha">Senhas</string>
    <string name="arquivosdisp">Arquivos</string>
    <string name="adm">Administrador</string>
    <string-array name="conquistas">
        <item>Iniciante</item>
        <item>Aprendendo</item>
        <item>Rápido</item>
        <item>Muito rápido</item>
        <item>The Flash</item>
        <item>Formando</item>
        <item>Profissional</item>
        <item>Primeira derrota</item>
        <item>Gastando</item>
        <item>Milionário</item>
    </string-array>

</resources>
